[gd_scene load_steps=4 format=3 uid="uid://bjwaf68ya2yel"]

[ext_resource type="Script" path="res://inventory/shop_ui_slot.gd" id="1_pghiv"]
[ext_resource type="FontFile" uid="uid://cpojoq47dln4s" path="res://Fonts/PixelOperator.ttf" id="2_3xwoo"]
[ext_resource type="Texture2D" uid="uid://nmfgafxv8cl4" path="res://Sprites/CoinIcon.png" id="3_4aj3h"]

[node name="Shop_UI_Slot" type="Panel" groups=["ShopUI"]]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 40)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_pghiv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="DragSprite" type="Sprite2D" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_3xwoo")

[node name="SlotBG" type="Sprite2D" parent="."]
position = Vector2(16, 16)

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="Button" type="Button" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="PriceTag" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 34.0
offset_right = 38.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2_3xwoo")
theme_override_font_sizes/font_size = 8
text = "000"

[node name="CoinIcon" type="Sprite2D" parent="."]
position = Vector2(5, 37)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_4aj3h")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
